# grupy-sanca-agenda-bot

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test_push.yaml
grupy_sanca_agenda_bot/: __init__.py  bot.py  commands.py  constants.py  database.py  events.py  main.py  models.py  scheduler.py  schemas.py  settings.py  utils.py
tests/: conftest.py  test_commands.py  test_database.py  test_events.py  test_scheduler.py  test_utils.py
tests/fixtures/: meetup_event_page_example.html  meetup_homepage_example.html
