[tool.poetry]
name = "grupy-sanca-agenda-bot"
version = "0.1.0"
description = "Bot do Telegram que retorna os eventos do Meetup do grupy-sanca"
authors = ["Juliana Karoline <julianaklulo@gmail.com>"]
readme = "README.md"
packages = [{include = "grupy_sanca_agenda_bot"}]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.3 "
python-telegram-bot = "^21.7"
python-dotenv = "^1.0.1"
apscheduler = "^3.10.4"
pydantic-settings = "^2.6.1"
pytz = "^2024.2"
httpx = "^0.27.2"

[tool.poetry.dev-dependencies]
ruff = "^0.7.4"

[tool.poetry.scripts]
start-bot = "grupy_sanca_agenda_bot.main:main"

[tool.ruff]
lint.select = ["I", "C", "E", "F"]
lint.extend-select = ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
