[project]
name = "grupy-sanca-agenda-bot"
version = "0.1.0"
description = "Bot do Telegram que retorna os eventos do Meetup do grupy-sanca"
authors = [
    {name = "Juliana Karoline", email = "julianaklulo@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "APScheduler>=3.11.0",
    "beautifulsoup4>=4.12.3",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.0.1",
    "python-telegram-bot>=21.9",
    "pytz>=2024.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-env>=1.1.5",
    "respx>=0.21.1",
    "ruff>=0.8.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
env = [
    "TELEGRAM_BOT_TOKEN = 123",
    "MEETUP_GROUP_URL = https://fake-meetup.com",
    "GROUP_CHAT_ID = 123",
    "ADMINS = [123, 321]",
]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"

[tool.ruff]
line-length = 110
lint.select = ["I", "C", "E", "F"]
lint.extend-select = ["I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
start-bot = "grupy_sanca_agenda_bot.main:main"
